fixed styling issue where card images were being cut off

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -20,7 +20,7 @@
     margin-bottom: 38px;
 }
 
-.card-img-top {
+.card-img-top-new {
     width: 100%;
     height: 10vw;
     object-fit: cover;
